# obs-speech-timer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json  configure.bat  obs-frontend-api.def  obs.def  obs_exports.txt  resources.qrc  setup_env.bat
.deps/: .dependency_prebuilt_x64.sha256  .dependency_qt6_x64.sha256
.deps/obs-deps-2023-04-12-x64/cmake/: janssonTargets.cmake
.deps/obs-deps-2023-04-12-x64/lib/cmake/CURL/: CURLTargets.cmake
.deps/obs-deps-2023-04-12-x64/lib/cmake/Opus/: OpusTargets.cmake
.deps/obs-deps-2023-04-12-x64/lib/cmake/cmocka/: cmocka-config.cmake
.deps/obs-deps-2023-04-12-x64/lib/pkgconfig/: freetype2.pc  libcurl.pc  libzstd.pc
cmake/: FindLibObs.cmake
include/callback/: proc.h  signal.h
include/graphics/: graphics.h  vec2.h  vec3.h
include/media-io/: audio-io.h  frame-rate.h  video-io.h
include/util/: bmem.h  c99defs.h  darray.h  profiler.h  text-lookup.h  util.hpp
locale/: zh-CN.ini
src/: appreciation-dialog.cpp  countdown-widget.cpp  obs-dock-wrapper.cpp  obs-dock-wrapper.hpp  plugin-main.cpp  timer-dock.cpp  timer-dock.hpp  timer-record.hpp
